# chat

./: .env  Cargo.toml  app.yaml  cliff.toml  deny.toml
chat_server/: Cargo.toml  app.yaml  http.rest
chat_server/fixtures/: decoding.pem  encoding.pem
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  errors.rs  handlers.rs  lib.rs  main.rs  middlewares.rs  model.rs  models.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs
chat_server/src/middlewares/: auth.rs  request_id.rs  server_time.rs
chat_server/src/model/: user.rs
chat_server/src/models/: user.rs
chat_server/src/utils/: jwt.rs
migrations/: 20240715102049_init.sql  20250331122553_initial.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
notify_server/static/: index.html
src/: config.rs  lib.rs  main.rs
src/handlers/: chat.rs
