[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["compression-full", "cors", "trace", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
] }
chrono = { version = "0.4.40", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = "0.12.12"
tower = "0.5.2"
uuid = { version = "1.16.0", features = ["v7", "serde"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }

[dev-dependencies]
sqlx-db-tester = "0.6.0"
